# Kursovaya5

./: DBManager.py  README.md  config.py  main.py  pyproject.toml  queries.sql  read_command_db.py  work_with_BD.py
